--- a/signup.html
+++ b/signup.html
@@ -189,7 +189,7 @@
     <div class="divider">or</div>
 
     <div class="signup">
-      Already have an account? <a href="signin.html">Log In</a>
+      Already have an account? <a href="index.html">Log In</a>
     </div>
 
     <div class="dots">
