--- a/client.html
+++ b/client.html
@@ -15,7 +15,7 @@
     body {
       margin: 0;
       font-family: 'Roboto', Arial, sans-serif;
-      background: linear-gradient(180deg, #ffffff, #ffffff);
+      background: white;
       color: white;
       height: 100vh;        /* full viewport height */
       overflow: hidden;     /* prevent body scroll */
@@ -259,3 +259,4 @@
 
 </body>
 </html>
+
