--- a/clientchat.html
+++ b/clientchat.html
@@ -118,6 +118,7 @@
     .message.admin {
       background: #622aac;
       align-self: flex-start;
+      margin-left: 10px;
     }
 
     .message.selected {
