--- a/clientchat.html
+++ b/clientchat.html
@@ -116,7 +116,7 @@
     }
 
     .message.admin {
-      background: #622aac;
+      background: #6f1ab6;
       align-self: flex-start;
       margin-left: 10px;
     }
